--- a/components/ProductList.module.css
+++ b/components/ProductList.module.css
@@ -1,6 +1,4 @@
 .section {
-  padding-top: var(--space-12);
-  padding-bottom: var(--space-12);
 }
 
 .header {
